--- a/Max/indiana-jones/index.html
+++ b/Max/indiana-jones/index.html
@@ -32,7 +32,7 @@
         <div class="signOut">
             <img class="userImg" src="../assets/images/avatar.png" alt="avatar" />
             <div class="dropDown">
-                <a href="/Site/index.html"> Konto Wechseln </a>
+                <a href="/site/"> Konto Wechseln </a>
             </div>
         </div>
     </nav>
