--- a/Max/index.html
+++ b/Max/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <a class="navLogo" href="../index.html">
+        <a class="navLogo">
             <img src="assets/images/logo.svg" alt="Disney+" />
         </a>
         <div class="navMenu">
