--- a/Max/star-wars/star-wars-angriff-der-klonkrieger-episode-ii/index.html
+++ b/Max/star-wars/star-wars-angriff-der-klonkrieger-episode-ii/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/Inside out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Transformers Aufstieg der Bestien</title>
+    <title>Star Wars:Angriff der Klonkrieger</title>
 </head>
 <body>
     <nav>
@@ -16,7 +16,7 @@
             <img src="../assets/images/logo.svg" alt="Disney+" />
         </a>
         <div class="navMenu">
-            <a href="../index.html">
+            <a href="/site/Max/">
                 <img src="../assets/images/home-icon.svg" alt="HOME" />
                 <span>HOME</span>
             </a>
@@ -39,20 +39,20 @@
 
     <div class="detail">
         <div class="detailBgImg">
-            <img id="bgImg" alt="" src="https://image.tmdb.org/t/p/original/2vFuG6bWGyQUzYS9d69E5l85nIz.jpg" />
+            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/12021A67C1860C1D7B490845A89858743ED4DF8E0B5F18C10454389103FC0A57/scale?width=1440&aspectRatio=1.78&format=jpeg"/>
         </div>
 
         <div class="detailImgTitle">
-            <img id="imgTitle" alt="" src="https://images-eu.ssl-images-amazon.com/images/S/pv-target-images/5c38cb91fbb9a4df84a6a9dbac59ea7c4625dee402219177399ab6c6485cde8a._SX900_FMpng_.png" />
+            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/69BDDC316B93403736A88C731ECA84B89F8A67222AEC0CBB2920FB7CC61DBDCA/scale?width=1440&aspectRatio=1.78&format=png" />
         </div>
         <div class="contentMeta">
             <div class="controls">
-                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1lXq3hdm2J2dFz-2o-gUsvt7VHvVLsi20/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
+                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
                     <img src="../assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/HJEYvRhEWk4?si=ImOJI5nxH037rGSo')">
+                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/_hXw9dxvZo0?si=jAl7N1OVb4Mu8NP3')">
                     <img src="../assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
@@ -79,7 +79,7 @@
             downloadButton.classList.toggle('active');
         }
         function downloadMovie() {
-        var downloadUrl = 'https://drive.google.com/u/0/uc?id=1lXq3hdm2J2dFz-2o-gUsvt7VHvVLsi20&export=download&confirm=t&uuid=3fedb685-f4e9-437b-a7eb-a046ef1ff51a&at=AB6BwCAitx0d4RaOp7xHqiqqr6-0:1702668030649';
+        var downloadUrl = 'https://drive.google.com/u/0/uc?id=1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn&export=download&confirm=t&uuid=8c1b0f2c-e300-45d3-a552-14938ec63d19&at=AB6BwCAuXcfHDZ2AJNq_ZO3mean-:1702308808116';
         window.location.href = downloadUrl;
     }
     </script>
